# nself

./: .gitignore  .gitleaks.toml  .gitleaksignore  .semgrepignore  AUDIT-FINDINGS-SUMMARY.md  AUDIT-INDEX.md  CHANGELOG.md  CLAUDE.md  DBTOOLS.md  DOCS-UPDATE-SUMMARY.md  ERROR-HANDLING-ADDITIONS.md  ERROR-HANDLING-COMPLETE.md  FEATURE_PARITY_REVIEW.md  FEEDBACK.md  FEEDWEB.md  IMMEDIATE_TASKS.md  LICENSE  QA_SUMMARY.md  README.md  RELEASE_GUIDE.md  TEMPLATE_VALIDATION_REPORT.md  TEST-COMPATIBILITY-FIXES.md  debug-build.sh  feedback.md  install.sh  nself  sync-wiki.sh
.claude/: CLAUDE.md
.github/: .pre-commit-config.yaml  .secrets.baseline  FUNDING.yml  wiki-home-template.md
.releases/: RELEASE_GUIDE.md
.wiki/: CONSISTENCY-FIX-GUIDE.md  DOCUMENTATION-INDEX-V0.9.8.md  DOCUMENTATION-QUICK-REFERENCE.md  EXAMPLES-AND-TUTORIALS.md  Home.md  LICENSE.md  README.md  STRUCTURE.md  STYLE-GUIDE.md  _Sidebar.md
aur/: .SRCINFO  PKGBUILD
docker/: Dockerfile  build-and-push.sh  docker-compose.yml
docs/: API.MD  API.md  ARCHITECTURE.MD  AUDIT-REPORT.md  Admin-UI.md  BACKUP_GUIDE.md  CHANGELOG-0.3.1.MD  CHANGELOG-0.3.1.md  CHANGELOG.MD  CHANGELOG.md  CODE_STYLE.MD  COMMAND-TREE-FINAL.md  COMMANDS.md  CONFIG.md  CONSISTENCY-FIX-GUIDE.md  CONTRIBUTING.MD  CONTRIBUTING.md  CUSTOM_SERVICES.md  Configuration.md  DECISIONS.MD  DECISIONS.md  DELIVERY-CHECKLIST.md  DIRECTORY_STRUCTURE.MD  DOCUMENTATION-INDEX-V0.9.8.md  DOCUMENTATION-QUICK-REFERENCE.md  ENVIRONMENT-VARIABLES.md  EXAMPLES.MD  (+40 more)
src/templates/services/rs/: Cargo.toml  Dockerfile
src/templates/services/rs/src/: main.rs
(+1584 files in other folders)
